# eo-price-reader

./: .env.example  README.md  main.py  output.txt  pyproject.toml  setup.cfg
docs/: Assets.md  Messages.md  Trades.md
eopr/: __init__.py  __main__.py  errors.py
eopr/core/strategies/: macd_rsi_crossover.py
eopr/indicators/: common.py  macd.py  relative_strength_index.py  rsi.py  rsi_.py
eopr/strategies/: macd_rsi_crossover.py
src/: __init__.py
src/eopr/: __init__.py  errors.py
src/eopr/core/indicators/: common.py  macd.py  rsi.py
src/eopr/utils/: candle_parser.py
src/indicators/: macd.py  rsi.py
typings/rel/: __init__.pyi  errors.pyi  listener.pyi  registrar.pyi  rel.pyi  test.pyi  tools.pyi
typings/websocket/: _app.pyi  _http.pyi  _socket.pyi
